--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <div class="myname">Hongying Li</div>
     <div class="bar">
         <ul class="only">
-            <a class="heihei" href="#">Home</a>
+            <a class="heihei home" href="#">Home</a>
             <a class="heihei" href="#">About</a>
             <a class="heihei" href="#">Contact</a>
             <a class="heihei" href="#">Projects</a>
@@ -32,31 +32,31 @@
 
 <section id="about">
     <div class="img_row">
-        <div class="pic_box">
+        <div class="pic_box1">
             <img class="pic" src="assets/IMG-1.jpeg"/>
             <h3>Title of a</h3>
         </div>
         
-        <div class="pic_box">
+        <div class="pic_box2">
             <img class="pic" src="assets/IMG-2.jpeg"/>
             <h3>Project Might</h3>
         </div>
         
-        <div class="pic_box">
+        <div class="pic_box3">
             <img class="pic" src="assets/IMG-3.jpeg"/>
             <h3>Project Might</h3>
         </div>
     </div>
     <div class="img_row">
-        <div class="pic_box">
+        <div class="pic_box4">
             <img class="pic" src="assets/IMG-4.jpeg"/>
             <h3>cool thing</h3>
         </div>
-        <div class="pic_box">
+        <div class="pic_box5">
             <img class="pic" src="assets/IMG-5.jpeg"/>
             <h3>Fun Thing</h3>
         </div>
-        <div class="pic_box">
+        <div class="pic_box6">
             <img class="pic" src="assets/IMG-6.jpeg" alt="thanks">
             <h3>Spicy Thing</h3>
         </div>
