--- a/projects.html
+++ b/projects.html
@@ -66,8 +66,10 @@
 </section>
 
 <footer>
-    <div>
+    <div class="cm">
+        <div class="vertical-center">
         <button>Contact Me</button>
+    </div>
     </div>
 </footer>
     
